<resources>
    <string name="app_name">ScrcpyForAndroid</string>

    <string name="language_switch">Language Switch</string>
    <string name="language_switch_label">中/En</string>
    <string name="device_icon">Device Icon</string>
    <string name="connect_device">Connect Device</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="confirm_connect">Confirm Connection</string>
    <string name="ip_address_empty">IP address cannot be empty</string>
    <string name="retry">Retry</string>
    <string name="history">History</string>

    <string name="label_server_ip">Remote Device IP address, For example: 192.168.0.73</string>
    <string name="label_video_resolution">Resolution</string>
    <string name="delay_control">Delay Control</string>
    <string name="label_video_bitrate">Bitrate</string>
    <string name="label_x">x</string>
    <string name="action_start">Start</string>
    <string name="appswitch_button">=</string>
    <string name="home_button">o</string>
    <string name="back_button">\u003C</string>
    <string name="switch0">Viewing mode (no control)</string>
    <string name="switch1">Bottom control button (back button)</string>

    <string name="connect_tips">Tips: You need to enable wireless debugging on your phone\n\t\tReset adb port command: adb tcpip 5555</string>
    <string name="please_wait">Connecting …</string>

    <string name="connect_faild">Connection failed</string>
    <string name="connect_faild_ask">Do you want to retry the connection?</string>

    <string name="disconnect">Disconnect</string>
    <string name="disconnect_ask">The connection is detected to be disconnected, please exit and reconnect</string>

    <string name="need_register">Registration required</string>
    <string name="setting">setting</string>

    <string name="connect_device_tip">Connect Device</string>
    <string name="remote_no_device_connect">Connection lost</string>

</resources>
