<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_tips"
        android:layout_marginBottom="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editText_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_ip_address"
            android:inputType="textUri"
            android:layout_toStartOf="@+id/button_history"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/button_history"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_history"
            android:padding="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/history" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_confirm_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/confirm_connect"
        android:textColor="@android:color/white" />

</LinearLayout>
