<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- 顶部标题栏 -->
    <RelativeLayout
        android:id="@+id/layout_title_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <!-- 居中标题 -->
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="远程助手"
            android:textSize="18sp"
            android:textColor="@color/status_bar"
            android:textStyle="bold" />

        <!-- 右侧设置图标 -->
        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_optional"
            android:contentDescription="@string/setting"
            android:clickable="true"
            android:focusable="true" />
    </RelativeLayout>

    <!-- 中间容器 -->
    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title_bar"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="#DEE0E2">

        <ImageView
            android:id="@+id/image_device_icon"
            android:layout_width="@dimen/dp_160"
            android:layout_height="@dimen/dp_130"
            android:scaleType="fitXY"
            android:src="@drawable/no_connected_device" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/secondaryText"
            android:text="@string/remote_no_device_connect" />

        <Button
            android:id="@+id/button_connect_device"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_36"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:text="@string/connect_device"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
